<resources>
    <string name="app_name">RateCalculator</string>
    <string name="btn_label">Button</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint_label">Input RMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Sava</string>
    <string name="year">2018</string>
    <string name="month">10</string>
    <string name="data">8</string>
    <string name="btn_newlist1">ShowList</string>
    <string name="btn_newlist2">ShowList_self</string>
</resources>
