<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.ratecalculator.MainActivity">

    <EditText
        android:id="@+id/rmb"
        android:inputType="numberDecimal"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/rmb_hint_label"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="147dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/show"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_width="0dp"
        android:text="@string/app_name"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/won"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:id="@+id/dollar"
        android:onClick="onClick"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_dollar_label"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/rmb"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:id="@+id/euro"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/dollar"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/dollar"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/dollar" />
    <Button
        android:id="@+id/won"
        android:onClick="onClick"
        android:text="@string/btn_won_label"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/euro"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/euro"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/euro" />
    <Button
        android:text="@string/btn_opencfg_label"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:onClick="openOne"
        android:id="@+id/btn_opencfg"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/show"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
